/*
 * Copyright (c) 2021 Government Technology Agency
 * Copyright (c) 2024-2026 Autowasp Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * build.gradle.kts - Gradle Build Configuration for Autowasp
 *
 * This file defines:
 * - Plugins to use
 * - Java version
 * - Dependencies (external libraries)
 * - How to build the JAR file
 */

// ════════════════════════════════════════════════════════════════════════════
// PLUGINS
// ════════════════════════════════════════════════════════════════════════════
/**
 * Plugins add capabilities to Gradle:
 * - `java`: Provides Java compilation
 * - `shadow`: Creates "fat JAR" (JAR containing all dependencies)
 */
plugins {
    java
    jacoco
    id("com.gradleup.shadow") version "8.3.6"
    id("com.diffplug.spotless") version "6.25.0"
    id("org.sonarqube") version "7.2.2.6593"
}

spotless {
    java {
        // palantirJavaFormat() -> Still failing, fallback to basic rules (KISS)
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
        removeUnusedImports()
        target("src/**/*.java")
    }
}

// ════════════════════════════════════════════════════════════════════════════
// PROJECT IDENTITY
// ════════════════════════════════════════════════════════════════════════════
/**
 * - group: Unique namespace (like reverse domain in Java)
 * - version: Software version (SNAPSHOT = still in development)
 */
group = "autowasp"
version = "2.2.9"


// ════════════════════════════════════════════════════════════════════════════
// JAVA CONFIGURATION
// ════════════════════════════════════════════════════════════════════════════
/**
 * Java 21 is the latest LTS (Long Term Support) with modern features:
 * - Virtual Threads (Project Loom)
 * - Pattern Matching for switch
 * - Record Patterns
 * - Sequenced Collections
 *
 * Burp Suite 2024+ supports Java 21.
 */
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// ════════════════════════════════════════════════════════════════════════════
// REPOSITORIES
// ════════════════════════════════════════════════════════════════════════════
/**
 * Repositories are where Gradle downloads dependencies from.
 * Maven Central is the largest public repository for Java libraries.
 */
repositories {
    mavenCentral()
}

// ════════════════════════════════════════════════════════════════════════════
// DEPENDENCIES
// ════════════════════════════════════════════════════════════════════════════
/**
 * Dependencies are external libraries required by the project.
 *
 * Dependency types:
 * - implementation: Required at compile AND runtime, included in JAR
 * - compileOnly: Required only at compile time, NOT included in JAR
 *                (Burp API is already provided by Burp Suite at runtime)
 *
 * Format: "groupId:artifactId:version"
 */
dependencies {
    // Burp Suite Montoya API - compile-only since Burp Suite provides it at runtime
    // Montoya API is the modern replacement for the Legacy Extender API
    // Documentation: https://portswigger.github.io/burp-extensions-montoya-api/javadoc/
    compileOnly("net.portswigger.burp.extensions:montoya-api:2025.12")

    // Apache Commons Collections - utilities for Collection types
    implementation("org.apache.commons:commons-collections4:4.5.0-M3")

    // Apache Commons Compress - for reading/writing archive files (ZIP, TAR)
    implementation("org.apache.commons:commons-compress:1.28.0")

    // Gson - Google's library for JSON parsing
    implementation("com.google.code.gson:gson:2.13.2")

    // Jsoup - library for parsing and manipulating HTML
    implementation("org.jsoup:jsoup:1.21.2")

    // Apache POI - library for creating Excel files (.xlsx)
    // Used for exporting reports to Excel
    // Version 5.x includes XMLBeans internally
    implementation("org.apache.poi:poi:5.5.1")
    implementation("org.apache.poi:poi-ooxml:5.5.1") {
        // Exclude BouncyCastle crypto library (not needed)
        exclude(group = "org.bouncycastle")
    }

    // Testing - JUnit 5
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")

    // Testing - Mockito for mocking
    testImplementation("org.mockito:mockito-core:5.8.0")
    testImplementation("org.mockito:mockito-junit-jupiter:5.8.0")
    testImplementation("org.mockito:mockito-inline:5.2.0") // Support for static mocking
    testImplementation("net.portswigger.burp.extensions:montoya-api:2025.12")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

// ════════════════════════════════════════════════════════════════════════════
// TASKS
// ════════════════════════════════════════════════════════════════════════════
/**
 * Tasks are commands that Gradle can execute.
 * Example: ./gradlew build, ./gradlew shadowJar
 *
 * shadowJar = Task from Shadow plugin to create FAT JAR
 * Fat JAR = JAR containing all dependencies (can run standalone)
 */
tasks.shadowJar {
    // Output filename: autowasp-jar-with-dependencies.jar
    archiveBaseName.set("autowasp")
    archiveClassifier.set("jar-with-dependencies")

    // Manifest = metadata inside JAR
    // Main-Class = entry point class (implements BurpExtension)
    manifest {
        attributes["Main-Class"] = "autowasp.Autowasp"
    }
}

// When running `./gradlew build`, also run shadowJar
tasks.build {
    dependsOn(tasks.shadowJar)
}

// ════════════════════════════════════════════════════════════════════════════
// TESTING
// ════════════════════════════════════════════════════════════════════════════
/**
 * Test configuration for JUnit 5 and JaCoCo coverage reporting.
 * Run tests: ./gradlew test
 * Generate coverage report: ./gradlew jacocoTestReport
 */
tasks.test {
    useJUnitPlatform()
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required.set(true)
        html.required.set(true)
    }
    classDirectories.setFrom(
        sourceSets.main.get().output.asFileTree.matching {
            exclude(
                "autowasp/ExtenderPanelUI*",
                "autowasp/checklist/*Table*",
                "autowasp/logger/**/*Table*",
                "autowasp/http/ContextMenuFactory*",
                "autowasp/checklist/ChecklistFetchWorker*",
                "autowasp/ProjectWorkspaceFactory*",
                "autowasp/Autowasp*"
            )
        }
    )
}

// ════════════════════════════════════════════════════════════════════════════
// SONAR CONFIGURATION
// ════════════════════════════════════════════════════════════════════════════
/**
 * SonarCloud integration for code quality and coverage reporting.
 *
 * Run analysis: ./gradlew sonar
 * Requires: SONAR_TOKEN environment variable
 */
sonar {
    properties {
        // Organization and project identification
        property("sonar.organization", "honk-buzz")
        property("sonar.projectKey", "brndls_autowasp")
        property("sonar.projectName", "Autowasp")
        property("sonar.projectVersion", version.toString())

        // SonarCloud host (optional for SonarCloud but good for clarity)
        property("sonar.host.url", "https://sonarcloud.io")

        // Source configuration
        property("sonar.sources", "src/main/java")
        property("sonar.tests", "src/test/java")
        property("sonar.java.source", "21")
        property("sonar.java.target", "21")
        property("sonar.sourceEncoding", "UTF-8")

        // Coverage configuration
        property("sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml")
        property("sonar.coverage.exclusions", listOf(
            "**/ExtenderPanelUI*.java",
            "**/checklist/*Table*.java",
            "**/logger/**/*Table*.java",
            "**/http/ContextMenuFactory*.java",
            "**/checklist/ChecklistFetchWorker*.java",
            "**/ProjectWorkspaceFactory*.java",
            "**/Autowasp*.java"
        ).joinToString(","))

        // Analysis exclusions
        property("sonar.exclusions", listOf(
            "**/build/**",
            "**/bin/**",
            "**/.gradle/**",
            "**/.legacy-backup/**"
        ).joinToString(","))

        // SCM and links
        property("sonar.scm.provider", "git")
        property("sonar.links.homepage", "https://github.com/brndls/autowasp")
        property("sonar.links.ci", "https://github.com/brndls/autowasp/actions")
        property("sonar.links.issue", "https://github.com/brndls/autowasp/issues")
        property("sonar.links.scm", "https://github.com/brndls/autowasp")
    }
}
